--- a/.gitignore
+++ b/.gitignore
@@ -27,6 +27,32 @@ go.work.sum
 # env file
 .env
 
+# Build artifacts
+bin/
+dist/
+build/
+deltagram
+deltagram.exe
+
 # Editor/IDE
-# .idea/
-# .vscode/
+.idea/
+.vscode/
+*.swp
+*.swo
+*~
+
+# OS generated files
+.DS_Store
+.DS_Store?
+._*
+.Spotlight-V100
+.Trashes
+ehthumbs.db
+Thumbs.db
+
+# Temporary files
+*.tmp
+*.temp
+
+# Log files
+*.log
