--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -24,8 +24,8 @@ jobs:
       with:
         go-version: 1.22
     
-    - name: Run tests
-      run: make test
+    - name: Run all tests
+      run: make test-all
     
     - name: Build for all platforms
       run: make build-all
