--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -60,9 +60,12 @@ jobs:
         # Simple changelog generation
         echo "## Changes" > CHANGELOG.md
         git log --oneline --pretty=format:"- %s" $(git describe --tags --abbrev=0 HEAD~1)..HEAD >> CHANGELOG.md || echo "- Initial release" >> CHANGELOG.md
-        echo "CHANGELOG<<EOF" >> $GITHUB_OUTPUT
+        
+        # Use a unique delimiter that won't conflict with content
+        delimiter=$(openssl rand -hex 8)
+        echo "CHANGELOG<<$delimiter" >> $GITHUB_OUTPUT
         cat CHANGELOG.md >> $GITHUB_OUTPUT
-        echo "EOF" >> $GITHUB_OUTPUT
+        echo "$delimiter" >> $GITHUB_OUTPUT
     
     - name: Create Release
       uses: softprops/action-gh-release@v2
