--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -61,11 +61,12 @@ jobs:
         echo "## Changes" > CHANGELOG.md
         git log --oneline --pretty=format:"- %s" $(git describe --tags --abbrev=0 HEAD~1)..HEAD >> CHANGELOG.md || echo "- Initial release" >> CHANGELOG.md
         
-        # Use a unique delimiter that won't conflict with content
-        delimiter=$(openssl rand -hex 8)
-        echo "CHANGELOG<<$delimiter" >> $GITHUB_OUTPUT
-        cat CHANGELOG.md >> $GITHUB_OUTPUT
-        echo "$delimiter" >> $GITHUB_OUTPUT
+        # Use JSON encoding to safely handle multiline content
+        {
+          echo 'CHANGELOG<<CHANGELOG_EOF'
+          cat CHANGELOG.md
+          echo 'CHANGELOG_EOF'
+        } >> $GITHUB_OUTPUT
     
     - name: Create Release
       uses: softprops/action-gh-release@v2
